--- a/style.css
+++ b/style.css
@@ -36,12 +36,13 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-color: black;
+    border-radius: 10px;
 
 }
 
 .container #miniGame #pokemonInicial{
     display: flex;
-    height: 100%;
+    height: 75%;
     justify-content: center;
     align-items: center;
 }
@@ -54,14 +55,31 @@ body{
     display: flex;
     justify-content: center;
     gap: 10px;
+    
 }
 
 .container #miniGame #botoesAcao .botao{
     margin-top: 20px;
-    height: 50px;
+    height: 40px;
     width: fit-content;
     padding: 10px;
-    background-color: rgb(255, 0, 0)  ;
-    color: #ffffff;
+    background: linear-gradient(#ff0000 50%, #ffffff 50%);
+    color: #000000;
     font-weight: bold;
+    border: none;
+    border-radius: 10px;
+}
+
+.container #miniGame #atributos{
+    display: flex;
+    justify-content: center;
+    
+    margin: 10px;
+    border: solid 2px black;
+    background-color: #fff78a;
+    height: 70px;
+    width: 250px;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    
 }
